changed _layout.scss to fix post image captions alignment and changed thumbnail images. Modified _layout.scss to set fixed tumbnail width.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -173,16 +173,6 @@ display: block;
 font-size: 42px;
 }
 
-/** Poem formatting ********************************************/
-.poem-title {
-font-size: 24px;
-letter-spacing: -1px;
-line-height: 1;
-@include media-query($on-laptop) {
-font-size: 16px;
-    }
-}
-
 
 /** 
  * Portfolio grid **********************************************************
@@ -206,7 +196,7 @@ box-sizing: border-box;
 padding: 10px;
 }
 .thumbnail {
-  width: 100%;
+  width: 230px;
   height: 230px;
   overflow: hidden;
   text-align: center; /* Center contents horizontally */
@@ -277,6 +267,7 @@ width: 100%;
 }
 .caption{
 height: 100%;
+float: center;
 color: $caption_color;
 text-align: center;
 vertical-align: middle;
